fixing colors for contrast and spacing issues with text

--- a/src/App.css
+++ b/src/App.css
@@ -58,7 +58,7 @@
   background: #40496b;
 }
 strong{
-  color: #b1c0e9;
+  color: #e6d8ad;
 }
 /* Critic Reviews */
 .aboutme .critic-reviews p {
